# perfcompare-new-stats

./: RAW_JETSTREAM_TRANSITION_PLAN.md  README.md  perf_compare_cli_new.py  perf_compare_display.py  perf_compare_stats.py  pyproject.toml  requirements.txt
perfcompare.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
standalone-stats/: LICENSE  bootstrap-ci.js  example-output.html  example.mjs  kde-widget.js  kde.d.ts  kde.js  package.json
